--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,5 +32,7 @@
             </div>
         </div>
     </section>
-    
+ 
     <script src="script.js"></script>
+</body>
+</html></html>
